some more javascript for the mockups

--- a/development.ini
+++ b/development.ini
@@ -20,7 +20,7 @@ port = 6543
 # Begin logging configuration
 
 [loggers]
-keys = root, pubssite, sqlalchemy
+keys = root, pubssite, sqlalchemy, pubs
 
 [handlers]
 keys = console
@@ -32,14 +32,19 @@ keys = generic
 level = INFO
 handlers = console
 
+[logger_pubs]
+level = INFO
+handlers = console
+qualname = pubs
+
 [logger_pubssite]
 level = DEBUG
-handlers =
+handlers = console
 qualname = pubssite
 
 [logger_sqlalchemy]
-level = INFO
-handlers =
+level = DEBUG
+handlers = console
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
 # "level = DEBUG" logs SQL queries and results.
