some commenting as well as correct APA author layouts

--- a/development.ini
+++ b/development.ini
@@ -38,12 +38,12 @@ handlers = console
 qualname = pubs
 
 [logger_pubssite]
-level = DEBUG
+level = WARN
 handlers = console
 qualname = pubssite
 
 [logger_sqlalchemy]
-level = DEBUG
+level = WARN
 handlers = console
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
