--- a/development.ini
+++ b/development.ini
@@ -11,7 +11,7 @@ pyramid.includes =
     pyramid_tm
 
 sqlalchemy.url = sqlite:///%(here)s/pubssite.db
-
+sqlalchemy.pool_recycle = 5
 [server:main]
 use = egg:waitress#main
 host = 0.0.0.0
