removes annoying double logging

--- a/development.ini
+++ b/development.ini
@@ -29,23 +29,26 @@ keys = console
 keys = generic
 
 [logger_root]
-level = INFO
-handlers = console
+level = ERROR
+handlers = 
 
 [logger_pubs]
 level = INFO
 handlers = console
 qualname = pubs
+propagate = 0
 
 [logger_pubssite]
-level = WARN
+level = DEBUG
 handlers = console
 qualname = pubssite
+propagate = 0
 
 [logger_sqlalchemy]
 level = WARN
 handlers = console
 qualname = sqlalchemy.engine
+propagate = 0
 # "level = INFO" logs SQL queries.
 # "level = DEBUG" logs SQL queries and results.
 # "level = WARN" logs neither.  (Recommended for production systems.)
