--- a/development.ini
+++ b/development.ini
@@ -29,7 +29,7 @@ keys = console
 keys = generic
 
 [logger_root]
-level = ERROR
+level = INFO
 handlers = 
 
 [logger_pubs]
@@ -45,7 +45,7 @@ qualname = pubssite
 propagate = 0
 
 [logger_sqlalchemy]
-level = WARN
+level = INFO
 handlers = console
 qualname = sqlalchemy.engine
 propagate = 0
